адаптивные сетки каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,176 +39,193 @@
 </header>
 
 <main class="page__main">
+  <h1 class="visually-hidden">Каталог здорового питания Кэт-энерджи</h1>
 
   <section class="catalog">
+    <h2 class="catalog__title">Каталог продукции</h2>
     <div class="catalog-inner container">
-      <h1 class="visually-hidden">Каталог здорового питания Кэт-энерджи</h1>
-      <h2 class="catalog__title">Каталог продукции</h2>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Pro 500 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">500 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Курица</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">700 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Pro 500 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">500 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Курица</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">700 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/chicken-1000.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Pro 1000 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">1000 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Курица</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">1000 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/chicken-1000.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">1000 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Курица</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">1000 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/fish-500.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Pro 500 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">500 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Рыба</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">700 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/fish-500.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Pro 500 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">500 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Рыба</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">700 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/fish-1000.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Pro 1000 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">1000 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Рыба</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">1000 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/fish-1000.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">1000 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Рыба</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">1000 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/buckwheat-500.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Slim 500 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">500 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Гречка</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">400 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/buckwheat-500.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Slim 500 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">500 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Гречка</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">400 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/buckwheat-1000.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Slim 1000 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">1000 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Гречка</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">700 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/buckwheat-1000.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Slim 1000 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">1000 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Гречка</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">700 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block">
-        <img class="product-block__image" src="img/catalog/rice-500.png" width="140" height="112" alt="">
-        <div class="product">
-          <h3 class="product__title">Cat Energy Slim 500 г</h3>
-          <ul class="product__list">
-            <li class="product__item">
-              <span class="product__category">Масса</span>
-              <b class="product__value">500 г</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Вкус</span>
-              <b class="product__value">Рис</b>
-            </li>
-            <li class="product__item">
-              <span class="product__category">Цена</span>
-              <b class="product__value">500 Р.</b>
-            </li>
-          </ul>
+      <div class="product-block-outer">
+        <div class="product-block container">
+          <img class="product-block__image" src="img/catalog/rice-500.png" width="140" height="112" alt="">
+          <div class="product">
+            <h3 class="product__title">Cat Energy Slim 500 г</h3>
+            <ul class="product__list">
+              <li class="product__item">
+                <span class="product__category">Масса</span>
+                <b class="product__value">500 г</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Вкус</span>
+                <b class="product__value">Рис</b>
+              </li>
+              <li class="product__item">
+                <span class="product__category">Цена</span>
+                <b class="product__value">500 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="product__button main-link" href="#">Заказать</a>
         </div>
-        <a class="product__button main-link" href="#">Заказать</a>
       </div>
 
-      <div class="product-block product-block--more">
-        <h3 class="product-block__title">Показать еще 100500 товаров</h3>
-        <p class="product__description">На самом деле вкусов гораздо больше!</p>
-        <a class="product__button main-link main-link--discreet" href="#">Показать все</a>
+      <div class="product-block-outer">
+        <div class="product-block product-block--more">
+          <h3 class="product-block__title">Показать еще 100500 товаров</h3>
+          <p class="product__description">На самом деле вкусов гораздо больше!</p>
+          <a class="product__button main-link main-link--discreet" href="#">Показать все</a>
+        </div>
       </div>
     </div>
   </section>
 
   <section class="additives container">
     <h2 class="additives__title">Дополнительные товары</h2>
+
     <div class="additive-outer">
       <div class="additive">
         <h3 class="additive__title">Сахарозаменитель</h3>
