адаптивные сетки каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,10 +43,10 @@
 
   <section class="catalog">
     <h2 class="catalog__title">Каталог продукции</h2>
-    <div class="catalog-inner container">
+    <div class="catalog-inner">
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Pro 500 г</h3>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/chicken-1000.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Pro 1000 г</h3>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/fish-500.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Pro 500 г</h3>
@@ -118,7 +118,7 @@
       </div>
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/fish-1000.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Pro 1000 г</h3>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/buckwheat-500.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Slim 500 г</h3>
@@ -166,7 +166,7 @@
       </div>
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/buckwheat-1000.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Slim 1000 г</h3>
@@ -190,7 +190,7 @@
       </div>
 
       <div class="product-block-outer">
-        <div class="product-block container">
+        <div class="product-block">
           <img class="product-block__image" src="img/catalog/rice-500.png" width="140" height="112" alt="">
           <div class="product">
             <h3 class="product__title">Cat Energy Slim 500 г</h3>
@@ -226,66 +226,65 @@
   <section class="additives container">
     <h2 class="additives__title">Дополнительные товары</h2>
 
-    <div class="additive-outer">
-      <div class="additive">
-        <h3 class="additive__title">Сахарозаменитель</h3>
-        <ul class="additive__list">
-          <li class="additive__item">
-            <span class="additive_amount">1 упаковка (100 г)</span>
-            <b class="additive_count">200 Р.</b>
-          </li>
-        </ul>
+    <div class="additives__outer">
+      <div class="additives__inner">
+        <div class="additive-wrapper">
+          <div class="additive">
+            <h3 class="additive__title">Сахарозаменитель</h3>
+            <ul class="additive__list">
+              <li class="additive__item">
+                <span class="additive_amount">1 упаковка (100 г)</span>
+                <b class="additive_count">200 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="main-link" href="#">Заказать</a>
+        </div>
+
+        <div class="additive-wrapper">
+          <div class="additive">
+            <h3 class="additive__title">Питьевая вода</h3>
+            <ul class="additive__list">
+              <li class="additive__item">
+                <span class="additive_amount">5 литров</span>
+                <b class="additive_count">50 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="main-link" href="#">Заказать</a>
+        </div>
+
+        <div class="additive-wrapper">
+          <div class="additive">
+            <h3 class="additive__title">Молоко</h3>
+            <ul class="additive__list">
+              <li class="additive__item">
+                <span class="additive_amount">1 литр</span>
+                <b class="additive_count">100 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="main-link" href="#">Заказать</a>
+        </div>
+
+        <div class="additive-wrapper">
+          <div class="additive">
+            <h3 class="additive__title">Витамины</h3>
+            <ul class="additive__list">
+              <li class="additive__item">
+                <span class="additive_amount">1 упаковка (30 г)</span>
+                <b class="additive_count">300 Р.</b>
+              </li>
+            </ul>
+          </div>
+          <a class="main-link" href="#">Заказать</a>
+        </div>
       </div>
-      <a class="main-link" href="#">Заказать</a>
-    </div>
 
-    <div class="additive-outer">
-      <div class="additive">
-        <h3 class="additive__title">Питьевая вода</h3>
-        <ul class="additive__list">
-          <li class="additive__item">
-            <span class="additive_amount">5 литров</span>
-            <b class="additive_count">50 Р.</b>
-          </li>
-        </ul>
-      </div>
-      <a class="main-link" href="#">Заказать</a>
-
-    </div>
-
-    <div class="additive-outer">
-      <div class="additive">
-        <h3 class="additive__title">Молоко</h3>
-        <ul class="additive__list">
-          <li class="additive__item">
-            <span class="additive_amount">1 литр</span>
-            <b class="additive_count">100 Р.</b>
-          </li>
-        </ul>
-      </div>
-      <a class="main-link" href="#">Заказать</a>
-
-    </div>
-
-    <div class="additive-outer">
-      <div class="additive">
-        <h3 class="additive__title">Витамины</h3>
-        <ul class="additive__list">
-          <li class="additive__item">
-            <span class="additive_amount">1 упаковка (30 г)</span>
-            <b class="additive_count">300 Р.</b>
-          </li>
-        </ul>
-      </div>
-      <a class="main-link" href="#">Заказать</a>
-
-    </div>
-
-
-    <aside class="stock container">
-      <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
-      <p class="stock__description">Закажите все и получите чехол для кота в подарок!</p>
-    </aside>
+      <aside class="stock container">
+        <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
+        <p class="stock__description">Закажите все и получите чехол для кота в подарок!</p>
+      </aside>
     </div>
   </section>
 </main>
