накидывает шрифты на главной

--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,9 @@
       <h1 class="promo__title">Функциональное питание для котов</h1>
       <p class="promo__text">Занялся собой? Займись котом!</p>
       <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
-      <a class="promo__button main-link" href="form.html">Подобрать программу</a>
+      <div class="promo__link">
+        <a class="main-link" href="form.html">Подобрать программу</a>
+      </div>
     </div>
   </article>
 
@@ -103,7 +105,8 @@
             <img class="slider-images__image slider-images__image--fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
           </div>
           <div class="slider-images__cat slider-images__cat--static">
-            <img class="slider-images__image slider-images__image--static" src="img/index_cat-slider@1x.png" width="592" height="511" alt="слайдер в половинном состоянии.">
+            <img class="slider-images__image slider-images__image--static" src="img/index_cat-slider@1x.png" width="592" height="511"
+                 alt="слайдер в половинном состоянии.">
           </div>
           <div class="slider-images__cat slider-images__cat--after visually-hidden">
             <img class="slider-images__image slider-images__image--skinny" src="img/slider_cat-skinny.png" width="243" height="232" alt="кот после курса cat-energy.">
