накидывает шрифты страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
       </button>
       <ul class="header-nav__list container">
         <li class="header-nav__item">
-          <a class="header-nav__link">Главная</a>
+          <a class="header-nav__link" href="index.html">Главная</a>
         </li>
         <li class="header-nav__item">
           <a class="header-nav__link header-nav__link--active">Каталог продукции</a>
