шрифты для всех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
       <p class="promo__text">Занялся собой? Займись котом!</p>
       <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
       <div class="promo__link">
-        <a class="main-link" href="form.html">Подобрать программу</a>
+        <a class="main-link main-link--smaller-text" href="form.html">Подобрать программу</a>
       </div>
     </div>
   </article>
