--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
       <button class="menu-toggle" type="button">
         <span class="visually-hidden">Меню.</span>
       </button>
-      <ul class="header-nav__list container">
+      <ul class="header-nav__list">
         <li class="header-nav__item">
           <a class="header-nav__link" href="index.html">Главная</a>
         </li>
@@ -106,19 +106,19 @@
       <fieldset class="form-group form-group--add">
         <legend class="form-group__legend">Дополнительно</legend>
         <ul class="form-group__list form-group__list--add">
-          <li class="form-group__item">
+          <li class="form-group__item form-group__item--checkbox">
             <input class="form-group__checkbox visually-hidden" type="checkbox" name="sweetener" id="checkbox-1" checked>
             <label class="form-group__label form-group__label--checkbox" for="checkbox-1">Сахарозаменитель</label>
           </li>
-          <li class="form-group__item">
+          <li class="form-group__item form-group__item--checkbox">
             <input class="form-group__checkbox visually-hidden" type="checkbox" name="water" id="checkbox-2">
             <label class="form-group__label form-group__label--checkbox" for="checkbox-2">Питьевая вода</label>
           </li>
-          <li class="form-group__item">
+          <li class="form-group__item form-group__item--checkbox">
             <input class="form-group__checkbox visually-hidden" type="checkbox" name="milk" id="checkbox-3">
             <label class="form-group__label form-group__label--checkbox" for="checkbox-3">Молоко</label>
           </li>
-          <li class="form-group__item">
+          <li class="form-group__item form-group__item--checkbox">
             <input class="form-group__checkbox visually-hidden" type="checkbox" name="vitamins" id="checkbox-4">
             <label class="form-group__label form-group__label--checkbox" for="checkbox-4">Витамины</label>
           </li>
