--- a/source/index.html
+++ b/source/index.html
@@ -105,8 +105,7 @@
             <img class="cat-fat" src="img/slider_cat-fat.png" width="280" height="232" alt="кот до курса cat-energy.">
           </div>
           <div class="demo-slider__cat demo-slider__cat--static">
-            <img class="cats-static" src="img/index_cat-slider@1x.png" width="592" height="511"
-                 alt="слайдер в половинном состоянии.">
+            <img class="cats-static" src="img/index_cat-slider@1x.png" width="592" height="511" alt="слайдер в половинном состоянии.">
           </div>
           <div class="demo-slider__cat demo-slider__cat--after visually-hidden">
             <img class="cat-skinny" src="img/slider_cat-skinny.png" width="243" height="232" alt="кот после курса cat-energy.">
