--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,7 @@
 
   <section class="catalog">
     <h2 class="catalog__title">Каталог продукции</h2>
-    <div class="catalog-inner">
+    <div class="catalog-inner container">
 
       <div class="product-block-outer">
         <div class="product-block">
