мелкие декоративные элементы в каталоге

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -223,68 +223,69 @@
     </div>
   </section>
 
-  <section class="additives container">
-    <h2 class="additives__title">Дополнительные товары</h2>
-
-    <div class="additives__outer">
-      <div class="additives__inner">
-        <div class="additive-wrapper">
-          <div class="additive">
-            <h3 class="additive__title">Сахарозаменитель</h3>
-            <ul class="additive__list">
-              <li class="additive__item">
-                <span class="additive_amount">1 упаковка (100 г)</span>
-                <b class="additive_count">200 Р.</b>
-              </li>
-            </ul>
+  <section class="additives">
+    <div class="additives__wrapper container">
+      <h2 class="additives__title">Дополнительные товары</h2>
+      <div class="additives__outer">
+        <div class="additives__inner">
+          <div class="additive-wrapper">
+            <div class="additive">
+              <h3 class="additive__title">Сахарозаменитель</h3>
+              <ul class="additive__list">
+                <li class="additive__item">
+                  <span class="additive_amount">1 упаковка (100 г)</span>
+                  <b class="additive_count">200 Р.</b>
+                </li>
+              </ul>
+            </div>
+            <a class="main-link" href="#">Заказать</a>
           </div>
-          <a class="main-link" href="#">Заказать</a>
+
+          <div class="additive-wrapper">
+            <div class="additive">
+              <h3 class="additive__title">Питьевая вода</h3>
+              <ul class="additive__list">
+                <li class="additive__item">
+                  <span class="additive_amount">5 литров</span>
+                  <b class="additive_count">50 Р.</b>
+                </li>
+              </ul>
+            </div>
+            <a class="main-link" href="#">Заказать</a>
+          </div>
+
+          <div class="additive-wrapper">
+            <div class="additive">
+              <h3 class="additive__title">Молоко</h3>
+              <ul class="additive__list">
+                <li class="additive__item">
+                  <span class="additive_amount">1 литр</span>
+                  <b class="additive_count">100 Р.</b>
+                </li>
+              </ul>
+            </div>
+            <a class="main-link" href="#">Заказать</a>
+          </div>
+
+          <div class="additive-wrapper">
+            <div class="additive">
+              <h3 class="additive__title">Витамины</h3>
+              <ul class="additive__list">
+                <li class="additive__item">
+                  <span class="additive_amount">1 упаковка (30 г)</span>
+                  <b class="additive_count">300 Р.</b>
+                </li>
+              </ul>
+            </div>
+            <a class="main-link" href="#">Заказать</a>
+          </div>
         </div>
 
-        <div class="additive-wrapper">
-          <div class="additive">
-            <h3 class="additive__title">Питьевая вода</h3>
-            <ul class="additive__list">
-              <li class="additive__item">
-                <span class="additive_amount">5 литров</span>
-                <b class="additive_count">50 Р.</b>
-              </li>
-            </ul>
-          </div>
-          <a class="main-link" href="#">Заказать</a>
-        </div>
-
-        <div class="additive-wrapper">
-          <div class="additive">
-            <h3 class="additive__title">Молоко</h3>
-            <ul class="additive__list">
-              <li class="additive__item">
-                <span class="additive_amount">1 литр</span>
-                <b class="additive_count">100 Р.</b>
-              </li>
-            </ul>
-          </div>
-          <a class="main-link" href="#">Заказать</a>
-        </div>
-
-        <div class="additive-wrapper">
-          <div class="additive">
-            <h3 class="additive__title">Витамины</h3>
-            <ul class="additive__list">
-              <li class="additive__item">
-                <span class="additive_amount">1 упаковка (30 г)</span>
-                <b class="additive_count">300 Р.</b>
-              </li>
-            </ul>
-          </div>
-          <a class="main-link" href="#">Заказать</a>
-        </div>
+        <aside class="stock container">
+          <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
+          <p class="stock__description">Закажите все и получите чехол для кота в подарок!</p>
+        </aside>
       </div>
-
-      <aside class="stock container">
-        <h2 class="visually-hidden">Акция от магазина Кэт-энерджи</h2>
-        <p class="stock__description">Закажите все и получите чехол для кота в подарок!</p>
-      </aside>
     </div>
   </section>
 </main>
