--- a/source/form.html
+++ b/source/form.html
@@ -137,8 +137,8 @@
 <footer class="page__footer footer">
   <section class="footer__contacts">
     <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts-outer contacts-outer--dark">
-      <div class="contacts container">
+    <div class="contacts-outer contacts-outer--dark container">
+      <div class="contacts ">
         <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
