--- a/source/index.html
+++ b/source/index.html
@@ -9,15 +9,47 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
+  <!-- Pixel Glass -->
+  <style>
+    html {
+      background-repeat: no-repeat;
+      background-position: 50% 0;
+      /* Mobile layout by default */
+      background-image: url("./pp/mobile/main.png");
+    }
+    /* Tablet */
+    @media (min-width: 760px ) {
+      html {
+        /* Tablet layout */
+        background-image: url("./pp/tablet/main.png");
+      }
+    }
+    /* Desktop */
+    @media (min-width: 960px ) {
+      html {
+        /* Desktop layout */
+        background-image: url("./pp/desktop/main.png");
+      }
+    }
+  </style>
+  <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
+  <script src="../node_modules/pixel-glass/script.js"></script>
+  <!-- // Pixel Glass -->
 </head>
 
 <body class="page__body">
+<style>
+  body {
+    opacity: 0.6;
+  }
+</style>
+
 
 <header class="page__header">
   <div class="header container">
     <a class="logo" href="#">
-      <img class="logo__image" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
-      <img class="logo__image" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
+      <img class="logo__icon" src="img/svg/logo-cat@1x.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
+      <img class="logo__text" src="img/svg/logo-cat-text@1x.svg" width="101" height="18" alt="Текст логотипа кэт-энерджи.">
     </a>
     <nav class="header-nav">
       <button class="menu-toggle" type="button">
@@ -52,13 +84,13 @@
 
   <article class="health-programs container">
     <h2 class="visually-hidden">Программы здорового питания для Вашего котика</h2>
-    <section class="program">
+    <section class="program program--slim">
       <h3 class="program__title program__title--slim">Похудение</h3>
       <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
         сбросить лишний вес.</p>
       <a class="program__link" href="#">Каталог slim</a>
     </section>
-    <section class="program">
+    <section class="program program--fat">
       <h3 class="program__title program__title--fat">Набор массы</h3>
       <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
       <a class="program__link" href="#">Каталог pro</a>
@@ -139,8 +171,7 @@
     </div>
 
     <div class="footer__map map">
-      <img class="map__image" src="img/footer_location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-    </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div>
 
     <nav class="footer-nav">
       <div class="footer-inner container">
