--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
-  <!-- Pixel Glass -->
+<!--   Pixel Glass-->
   <style>
     html {
       background-repeat: no-repeat;
@@ -18,29 +18,29 @@
       background-image: url("./pp/mobile/main.png");
     }
     /* Tablet */
-    @media (min-width: 760px ) {
+    @media (min-width: 768px) {
       html {
         /* Tablet layout */
         background-image: url("./pp/tablet/main.png");
       }
     }
     /* Desktop */
-    @media (min-width: 960px ) {
+/*    @media (min-width: 960px) {
       html {
-        /* Desktop layout */
+        !* Desktop layout *!
         background-image: url("./pp/desktop/main.png");
       }
-    }
+    }*/
   </style>
   <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
-  <!-- // Pixel Glass -->
+<!--   // Pixel Glass-->
 </head>
 
 <body class="page__body">
 <style>
   body {
-    opacity: 0.6;
+    opacity: 0.7;
   }
 </style>
 
@@ -73,7 +73,7 @@
 <main class="page__main">
   <article class="promo-outer">
     <div class="promo container">
-      <h1 class="promo__title">Функциональное питание для котов</h1>
+      <h1 class="promo__title">Функциональное <br> питание для котов</h1>
       <p class="promo__text">Занялся собой? Займись котом!</p>
       <img class="promo__image" src="img/index_can.png" width="280" height="270" alt="упаковка питания Cat Energy.">
       <div class="promo__link">
@@ -117,11 +117,11 @@
         <ul class="demo-cat__list">
           <li class="demo-cat__item">
             <b class="demo-cat__importance">5 кг</b>
-            <p class="demo-cat__description">снижение веса</p>
+            <p class="demo-cat__description">снижение <br> веса</p>
           </li>
           <li class="demo-cat__item">
             <b class="demo-cat__importance">60 дней</b>
-            <p class="demo-cat__description">затрачено времени</p>
+            <p class="demo-cat__description">затрачено <br> времени</p>
           </li>
           <li class="demo-cat__item demo-cat__item--wide">
             <p class="demo-cat__expenses">Затраты на питание:
@@ -163,15 +163,15 @@
 <footer class="page__footer footer">
   <section class="footer__contacts">
     <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts-outer contacts-outer--dark container">
-      <div class="contacts ">
+    <div class="contacts-outer">
+      <div class="contacts container">
         <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
     </div>
 
-    <div class="footer__map map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div>
+    <div class="footer__map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="100%" height="100%" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>    </div>
 
     <nav class="footer-nav">
       <div class="footer-inner container">
@@ -214,7 +214,7 @@
           </ul>
         </div>
 
-        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#666666"
                   d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
