--- a/source/index.html
+++ b/source/index.html
@@ -25,12 +25,12 @@
       }
     }
     /* Desktop */
-/*    @media (min-width: 960px) {
+    @media (min-width: 1300px) {
       html {
-        !* Desktop layout *!
+        /* Desktop layout */
         background-image: url("./pp/desktop/main.png");
       }
-    }*/
+    }
   </style>
   <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
@@ -40,7 +40,7 @@
 <body class="page__body">
 <style>
   body {
-    opacity: 0.7;
+    opacity: 0.6;
   }
 </style>
 
@@ -103,7 +103,7 @@
       <li class="workflow__item workflow__item--health">Функциональное питание содержит только полезные питательные вещества.</li>
       <li class="workflow__item workflow__item--brew">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
       <li class="workflow__item workflow__item--change">Замените один-два приема обычной еды на наше функциональное питание.</li>
-      <li class="workflow__item workflow__item--profit">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+      <li class="workflow__item workflow__item--profit">Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего питомца!</li>
     </ul>
   </section>
 
@@ -124,9 +124,8 @@
             <p class="demo-cat__description">затрачено <br> времени</p>
           </li>
           <li class="demo-cat__item demo-cat__item--wide">
-            <p class="demo-cat__expenses">Затраты на питание:
-              <span class="demo-cat__cost">15000 руб.</span>
-            </p>
+            <p class="demo-cat__expenses">Затраты на питание:</p>
+            <span class="demo-cat__cost">15000 руб.</span>
           </li>
         </ul>
       </div>
