--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
-<!--   Pixel Glass-->
+  <!--   Pixel Glass-->
   <style>
     html {
       background-repeat: no-repeat;
@@ -17,6 +17,7 @@
       /* Mobile layout by default */
       background-image: url("./pp/mobile/main.png");
     }
+
     /* Tablet */
     @media (min-width: 768px) {
       html {
@@ -24,6 +25,7 @@
         background-image: url("./pp/tablet/main.png");
       }
     }
+
     /* Desktop */
     @media (min-width: 1300px) {
       html {
@@ -34,7 +36,7 @@
   </style>
   <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
-<!--   // Pixel Glass-->
+  <!--   // Pixel Glass-->
 </head>
 
 <body class="page__body">
@@ -114,20 +116,22 @@
         <p class="demo-cat__subtitle">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих
           тренировок!
           При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <ul class="demo-cat__list">
-          <li class="demo-cat__item">
-            <b class="demo-cat__importance">5 кг</b>
-            <p class="demo-cat__description">снижение <br> веса</p>
-          </li>
-          <li class="demo-cat__item">
-            <b class="demo-cat__importance">60 дней</b>
-            <p class="demo-cat__description">затрачено <br> времени</p>
-          </li>
-          <li class="demo-cat__item demo-cat__item--wide">
-            <p class="demo-cat__expenses">Затраты на питание:</p>
-            <span class="demo-cat__cost">15000 руб.</span>
-          </li>
-        </ul>
+        <div class="demo-cat__info">
+          <ul class="demo-cat__list">
+            <li class="demo-cat__item">
+              <b class="demo-cat__importance">5 кг</b>
+              <p class="demo-cat__description">снижение <br> веса</p>
+            </li>
+            <li class="demo-cat__item">
+              <b class="demo-cat__importance">60 дней</b>
+              <p class="demo-cat__description">затрачено <br> времени</p>
+            </li>
+          </ul>
+          <div class="demo-cat__total">
+            <p class="demo-cat__expenses">Затраты на питание: </p>
+            <span class="demo-cat__cost"> 15000 руб.</span>
+          </div>
+        </div>
       </div>
 
       <div class="demo-slider">
@@ -164,13 +168,18 @@
     <h2 class="visually-hidden">Контакты</h2>
     <div class="contacts-outer">
       <div class="contacts container">
-        <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
+          <span class="contacts__city" >Санкт-Петербург</span>
+        </p>
       </div>
     </div>
 
     <div class="footer__map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru" width="100%" height="100%" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>    </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858716146866!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1639073287409!5m2!1sru!2sru"
+        width="100%" height="100%" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
 
     <nav class="footer-nav">
       <div class="footer-inner container">
