делает сетки каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,7 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 
+<!--
 
   <style>
     html {
@@ -37,17 +38,18 @@
   </style>
   <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
   <script src="../node_modules/pixel-glass/script.js"></script>
+-->
 
 
 </head>
 
 <body class="page__body">
 
-<style>
+<!--<style>
   body {
     opacity: 0.5;
   }
-</style>
+</style>-->
 
 <header class="page__header">
   <div class="header container">
